src/test/lab3/invalid/XX-Fail08.slac
class A {
    String string s; 
}

method main() : Unit = { println("42") }
